--- a/styles/index.css
+++ b/styles/index.css
@@ -79,7 +79,7 @@ select {
 }
 
 .cityName::before {
-    content: "for";
+    content: "for ";
 }
 
 .picture {
@@ -89,19 +89,6 @@ select {
     width: 25em;
     margin: auto;
     grid-row: 3 / 4;
-}
-
-.skyBox {
-    grid-column: 2 / 3;
-    background-color: lightskyblue;
-}
-
-.tempBox {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5; 
-    background-color: lightskyblue; 
-    display: grid;
-    grid-template: 44% 28% 28% / 5fr 2fr;
 }
 
 #changeCity {
@@ -129,17 +116,31 @@ select {
     grid-row: 2 / 3;
 }
 
+#skyBox {
+    grid-column: 2 / 3;
+    background-color: lightskyblue;
+}
+
 #skyPicture {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
 
-#temp {
+#tempBox {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5; 
+    background-color: rgb(255, 232, 190);
+    display: grid;
+    grid-template: 44% 28% 28% / 5fr 2fr;
+}
+
+#tempDisplay {
     grid-column: 1 / 3;
     grid-row: 2 / 4;
     text-align: center;
     font-size: 36px;
     padding-top: 6px;
+    color: rgb(244, 158, 0);
 }
 
 #tempHeading {
@@ -150,4 +151,9 @@ select {
 #tempLandscape {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+}
+
+#tempPic {
+    height: 25em;
+    width: 25em;
 }
