--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,88 @@
-*{background-color: white}
 
+body {
+    background-color: blue;
+    color: white;
+    border: 200px;
+    padding: 10px
+        
+    }
+main {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 100px;
+    grid-row-gap: 30px;
+    align-items: center;
+
+        
+
+
+}
 .red {color: red;}
 .orange {color: orange;}
 .yellow {color: yellow;}
 .green {color: green;}
 .teal {color: teal;}
 
+.title {
+    grid-column: auto / span 2;
+    text-align: center;  
+    }
+
+
+#widget {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-row-gap: 50px;
+    justify-items: center;
+}
+.temp-container {
+    color: black;
+    background-color: white;
+    /* grid-column-start: 1; */
+    border: 1px solid white;
+    border-radius: 5px;
+    width: 250px;
+    height: 150px;
+    text-align: center
+}
+.temp-container p {
+    
+}
+
+.sky-container {
+   color: black;
+    background-color: white;
+    /* grid-column-start: 1; */
+    border: 1px solid white;
+    border-radius: 5px;
+    width: 250px;
+    height: 150px;
+    text-align: center
+        
+   
+}
+
+.city-container {
+    color: black;
+    background-color: white;
+    /* grid-column-start: 1; */
+    border: 1px solid white;
+    border-radius: 5px;
+    width: 250px;
+    height: 150px; 
+    text-align: center
+        
+}
+
+.weather-box {
+    /* grid-row-start: 3; */
+    background-color: lightgrey;
+    border-radius: 5px;
+    width: 300px;
+    height: 150px;
+    text-align: center;
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between;     
+        
+}
