--- a/styles/index.css
+++ b/styles/index.css
@@ -47,7 +47,6 @@ select {
     border-radius: 6px;
     color: white;
     background-color: black;
-    border: black;
 }
 
 .box {
@@ -58,9 +57,6 @@ select {
 }
 
 .changeTemp {
-    background-color: black;
-    color: white;
-    border-radius: 6px;
     margin-top: 3px;
     margin-bottom: 5px;
     margin-left: 20px;
@@ -70,16 +66,12 @@ select {
     font-weight: 800;
 }
 
-.cityName {
+.cityInfo {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
     font-size: 18pt;
     text-align: center;
     color: white;
-}
-
-.cityName::before {
-    content: "for ";
 }
 
 .picture {
@@ -121,9 +113,11 @@ select {
     background-color: lightskyblue;
 }
 
-#skyPicture {
+#skyPic {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+    height: 25em;
+    width: 25em;
 }
 
 #tempBox {
@@ -139,7 +133,7 @@ select {
     grid-row: 2 / 4;
     text-align: center;
     font-size: 36px;
-    padding-top: 6px;
+    line-height: 0px;
     color: rgb(244, 158, 0);
 }
 
@@ -148,12 +142,9 @@ select {
     grid-row: 1 / 2;
 }
 
-#tempLandscape {
+#tempPic {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
-}
-
-#tempPic {
     height: 25em;
     width: 25em;
 }
