--- a/styles/index.css
+++ b/styles/index.css
@@ -3,17 +3,17 @@
 }
 
 h1 {
-    border-style: dashed;
+    font-family: cursive;
+    text-align: center;
+    height:150px;
 }
 
 #weatherSky {
     padding:25px;
-    border-style: dotted;
+    border-style:inset;
+    border-color: rgb(62, 6, 77);
     width: 500px;
-    height: 400px
-}
-
-#weatherSky {
+    height: 300px;
     background-image: url("/assets/Plain_GIF.gif");
 }
 
@@ -27,10 +27,12 @@ h1 {
     background-color: orange;
     font-size: 75px;
     text-align:center;
+    font-family: fantasy;
     color: black;
     width: 150px;
     height: 100px;
-    padding-top: 50px;
+    padding-top: 35px;
+    padding-bottom: 30px;
 }
 
 #landscape {
@@ -39,7 +41,8 @@ h1 {
 }
 
 #label {
-    background-color: rgb(62, 6, 77);
+    background-color: #5bc5c9;
+    font-family: cursive;
     color: white;
     width: 150px;
     height: 50px;
@@ -48,6 +51,12 @@ h1 {
     padding-bottom: 25px;
 
 }
+label {
+    background-color: white;
+    border-style:groove;
+    border-color: peachpuff;
+    padding: 5px
+}
 
 #buffer {
     width: 250px;
@@ -55,7 +64,9 @@ h1 {
 }
 
 #tempControl {
-    border-style: solid;
+    border-style:ridge;
+    height:fit-content;
+    width: fit-content;
 }
 
 #weatherApp {
@@ -64,8 +75,19 @@ h1 {
     color: white;
     font-family: fantasy;
     font-style: italic;
-    background-color: rgb(62, 6, 77);
+    background-color: #EB6E80;
 }
+
+#buttons {
+    display: flex;
+    justify-content: center;
+}
+
+#tempDecrease, #tempIncrease {
+    font-size: larger;
+    align-content:space-between;
+}
+
 body {
-    background-color: rgb(165, 199, 161);
+    background-color: beige;
 }
