--- a/styles/index.css
+++ b/styles/index.css
@@ -53,7 +53,6 @@ body, html {
 }
 
 .sky {
-    background-color: yellow;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -69,4 +68,16 @@ body, html {
     width: 100%;
     text-align: center;
     font-size: 75px;
+}
+
+.data__temp {
+    user-select: none;
+}
+
+.arrow {
+    font-size: x-large;
+}
+
+#temp {
+    font-size: xx-large;
 }
