--- a/styles/index.css
+++ b/styles/index.css
@@ -6,8 +6,8 @@ body, html {
     width: 100%;
     display: flex;
     flex-direction: row;
-    background-color: blue;
-    height: 150px;
+    background-color: rgba(221, 225, 231, 0.671);
+    height: 110px;
 }
 
 .header__section {
@@ -20,6 +20,7 @@ body, html {
 
 .header__section h1 {
     font-size: 45px;
+    font-family:sans-serif;
 }
 
 #city {
@@ -28,24 +29,23 @@ body, html {
 
 .data__section {
     width: 100%;
-    height: 200px;
+    height: 150px;
     display: flex;
     flex-direction: row;
-    background-color: lightgreen;
+    background-color: rgba(221, 225, 231, 0.671);
     justify-content: space-around;
 }
 
 .data__section section {
-    background-color: pink;
+    background-color: rgba(55, 126, 192, 0.712);
     margin: 30px;
-    height: 140px;
+    height: 100px;
     width: 275px;
     text-align: center;
 }
 
 .weather__garden {
-    background-color: orange;
-    height: calc(100vh - 350px);
+    height: calc(100vh - 260px);
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -58,6 +58,7 @@ body, html {
     flex-direction: row;
     justify-content: space-around;
     font-size: x-large;
+    font-family: sans-serif;
 }
 
 .sky div {
@@ -72,6 +73,10 @@ body, html {
 
 .data__temp {
     user-select: none;
+}
+
+.data__temp h2 {
+    margin-bottom: 3px;
 }
 
 .arrow {
