--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,4 @@
 body {
-    /* background-image: url('/assets/cute-cloud-background.jpg'); */
     background-color: rgb(255, 235, 239);
     text-align: center;
     background-size: 480px;
@@ -11,15 +10,14 @@ h1 {
     text-align: center;
 }
 
-#bunnyGif {
-    width: 100px;
-    height: 120px;
-    margin-top: 30px;
-}
-
-#cityDisplay {
+#city-display {
     text-align: center;
     font-size: 35px;
+}
+
+.bi-cloud {
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .container {
@@ -34,33 +32,33 @@ h1 {
     grid-row: 1 / 2;
 }
 
-.tempDefault {
+.temp-default {
     background-color: rgb(254, 254, 178);
     grid-column: 1 / 2;
     grid-row: 3 / 4;
 }
 
-.tempHeading {
-    margin-top: 10px;
+.label {
+    margin-top: 20px;
 }
 
-.skyLevel {
+.sky-level {
     background-color: rgb(194, 255, 254);
     grid-column: 3 / 4; 
     grid-row: 3 / 4;
 }
 
-.skyChoice {
+.sky-choice {
     margin-top: 20px;
 }
 
-.citySelect{
+.city-select{
     background-color: rgb(197, 254, 234);
     grid-column: 5 / 6;
     grid-row: 3 / 4; 
 }
 
-.weatherLandscape{
+.weather-landscape{
     background-color: floralwhite;
     grid-column: 2 / 5;
     grid-row: 5 / 6;
@@ -93,5 +91,5 @@ h1 {
 
 #landscape {
     font-size: 30px;
-    margin-top: 90px;
+    margin-top: 150px;
 }
