--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,13 @@
-header {
-    height: 15vh;
+.header-container {
+    height:15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+header {
+    color: darkblue
+}
+
 .col,
 .col-8 {
     height: 75vh;
@@ -21,6 +28,7 @@ header {
     display: flex;
     align-items: center
 }
+
 .btn-container {
     margin-left: 50px;
     display: flex;
@@ -38,12 +46,13 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px
+    padding: 20px;
 }
 
 .view-background {
     width: 70%;
-    height: 90%
+    height: 90%;
+    border-radius: 10px
 }
 .sky-background {
     height: 25%;
@@ -69,6 +78,6 @@ img {
 .activity-desc {
     height: 10%;
     text-align: center;
-    text-transform: capitalize;
-    font-size: larger;
+    text-transform: uppercase;
+    font-size: 1.3rem;
 }
