--- a/styles/index.css
+++ b/styles/index.css
@@ -49,3 +49,13 @@ h1 {
     margin-right:3rem;
     font-size: 14px;
 }
+
+.sky_section {
+    background-color: rgb(254, 250, 239);
+    padding: 0px 60px 0px 60px;
+    border-radius: 5px;
+}
+
+#skySelect {
+    align-content: center;
+}
