--- a/styles/index.css
+++ b/styles/index.css
@@ -59,3 +59,15 @@ h1 {
 #skySelect {
     align-content: center;
 }
+
+.city_section {
+    background-color: rgb(254, 250, 239);
+    padding: 0px 20px 0px 20px;
+    border-radius: 5px;
+}
+
+#temperatureTitle, #skyTitle, #cityTitle {
+    margin: 10px;
+    text-align: center;
+    font-size: 24px;
+}
