--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
     /* border-color: coral; */
     background-color: #292D3E;
     border-radius: 20px;
-    padding: 10px 15px;
+    padding: 0px 0px 0px 30px;
 }
 
 .container {
@@ -33,9 +33,10 @@ body {
     grid-row: 1/2;
 }
 
-#city-display {
+#city-block {
     grid-column: 1/2;
     grid-row: 2/3;
+    padding-left: 30px;
 }
 
 #city-input-block {
@@ -46,6 +47,7 @@ body {
 #temperature-block {
     grid-column: 2/3;
     grid-row: 2/4;
+    padding: 0px 30px 0px 30px;
 }
 
 #sky-select-block {
@@ -62,7 +64,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     /* color: #eeffff; */
     color: #676E95;
-    text-align: center;
+    text-align: left;
+    font-style: italic;
 }
 
 #title-text {
@@ -78,8 +81,8 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    border-color: #c792ea;
-    border-style: solid;
+    /* border-color: #c792ea;
+    border-style: solid; */
 }
 
 #temperature-title {
@@ -93,6 +96,12 @@ body {
     border-style: solid; */
     font-size: 55pt;
     font-weight:bolder;
+    font-style: normal;
+}
+
+button {
+    padding: 2px;
+    background-color: #676E95;
 }
 
 #landscape-block {
@@ -105,4 +114,11 @@ body {
     background-image: url(/imgs/sky-sunny.jpg);
     background-size: cover;
     background-position: top;
+}
+
+#city-display {
+    font-size: 18pt;
+    font-style: normal;
+    font-weight: bolder;
+    color: #eeffff;
 }
