--- a/styles/index.css
+++ b/styles/index.css
@@ -71,3 +71,36 @@ h1 {
     text-align: center;
     font-size: 24px;
 }
+
+.garden_section {
+    background-color: rgb(254, 250, 239);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    padding: 0px 20px 0px 20px;
+    margin-top: 40px;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+    border-radius: 5px;
+
+}
+
+#gardenTitle {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 24px;
+}
+
+.garden_content {
+    min-height: 200px;
+    display: flex;
+    flex-direction:column;
+    padding-bottom:20px;
+    justify-content: space-between;
+}
+
+#sky, #landscape {
+    font-size: 30px;
+}
