--- a/styles/index.css
+++ b/styles/index.css
@@ -4,30 +4,65 @@ body {
 
 button {
     border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    background-color: #0000FF;
+    color: #FFFFFF;
 }
 
 header {
     display: flex;
     align-items: baseline;
+    color: #FFFFFF;
+    gap: 10px;
 }
 
+input {
+    margin: 10px;
+}
 
-section {
+main {
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+}
+
+/* section {
     background-color: #FFFFFF;
-    height: 300px;
-    width: 300px;
-    margin: 30px;
+    margin: 20px;
     border-radius: 10px;
+} */
+
+section h2 {
+    margin: 20px;
+}
+
+select {
+    margin: 30px;
 }
 
 
 #sky-background {
     background-color: #C9C9C9;
-    width: 280px;
-    height: 50px;
+    border-radius: 10px;
 }
 
+#sky-background div {
+    margin: 15px;
+}
 
 #temp {
     color: #F0940A;
+    margin-left: 50px;
+    font-size: 40px;
+}
+
+#weather-garden {
+    background: None;
+    color: #FFFFFF;
+}
+
+.widget {
+    background-color: #FFFFFF;
+    margin: 20px;
+    border-radius: 10px;
 }
