--- a/styles/index.css
+++ b/styles/index.css
@@ -1,26 +1,49 @@
 /* https://www.csscolorpalettes.com/palettes/898 - main color palette */
 
-body {
-    background: #bfcfff;
+body.grid-1 {
+    background: #8ca3e6;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    grid-gap: 20px;
 }
 
-section.titleBlock {
-    background: #c8e7ed;
-    border: 4px solid #dabfff;
+header {
+    background: #c8efed;
+    border: 4px solid #ffffc2;
     color: #ffffc2;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
 
-section.skyBlock {
-    background: #ffffc2;
-    border: 4px solid #ffa5a5;
-    color: white;
+section#landscape {
+    border: 4px solid #ffffc2;
+    color: #ffffc2;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
 
-section.landscapeBlock {
+section.inputBlock {
+    background: #c8efed;
+    border: 4px solid #ffffc2;
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+/* 
+section.skyBlock {
+    background: #c8efed;
+    border: 4px solid #ffffc2;
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+} */
+
+select.skyDropMenu {
+    color: #2cb978
+}
+
+section.tempBlock {
     background: #c8efed;
     border: 4px solid #ffffc2;
     color: white;
@@ -28,19 +51,7 @@ section.landscapeBlock {
     -webkit-text-stroke-color: black;
 }
 
-section.tempBlock {
-    background: #dabfff;
-    border: 4px solid #c8e7ed;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-}
-
 section.tempDisplays {
     background: #ffffc2;
-    border: 4px solid #ffa5a5
-}
-
-h2.tempTitleText {
-    color: #2cb978
+    border: 4px solid #8ca3e6;
 }
