Trying to get the colors to change once temp reaches certain number

--- a/styles/index.css
+++ b/styles/index.css
@@ -47,3 +47,23 @@ body {
 .winter {
     background-color: lightsteelblue;
 }
+
+.red {
+    color: red;
+}
+
+.orange {
+    color: orange;
+}
+
+.yellow {
+    color: gold;
+}
+
+.green {
+    color: green;
+}
+
+.teal {
+    color: teal;
+}
