--- a/styles/index.css
+++ b/styles/index.css
@@ -26,13 +26,12 @@ header {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    /* background: url('https://i.gifer.com/CZx.gif');   */
     background-color: #373e30;
     width: 100%;
-    padding: 0px;
+    padding: 20px;
     font-family: 'Blippo', serif;
     font-size: 30px;
-    margin-top: 0px;
+    margin-top: 20px;
 }
 span.fancy {
     font-family: 'Snell Roundhand', cursive;
@@ -63,9 +62,17 @@ select {
 } 
 
 .bottom-sections {
+    margin-top: 20px;
     text-align: center;
     background-color: #819373;
     border-radius: 10px;
+    font-size: 15px;
+    padding: 10px;
+}
+#name {
+    border: none;
+    font-size: 15px;
+    margin-top: 20px;
 }
 #temperature-section {
     text-align: center;
@@ -74,9 +81,18 @@ select {
     border-radius: 20px;
 }
 #garden-section {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #cce8b5;
     border-radius: 20px;
+    font-size: 20px;
+    padding: 30px;
+    color: #373e30;
+}
+
+#weather-content{
+    font-size: 70px;
 }
 #temperature-section {
     display: flex;
@@ -93,10 +109,4 @@ select {
 #arrows {
     font-size: 30px;
     text-align: center;
-} */
-
-#name {
-    border: none;
-    font-size: 20px;
-    margin-top: 20px;
-}
+} 
