--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,82 @@
+* {
+    font-family: Brewski;
+    color: rgba(203, 174, 128, 0.85);
+}
+
+#button-refresh {  
+    width: 362px;
+    height: 67px;
+    background: rgba(203, 174, 128, 0.27);
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    border-radius: 4px;
+    font-size: 24px;
+    color: rgba(203, 174, 128, 0.85);
+    box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.2);
+    transition: all 200ms ease-in-out;
+}
+    
+#button-refresh:hover {
+    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.4);
+    transition: all 200ms ease-in-out;
+}
+
+#button-refresh:active {
+    box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.4);
+    opacity: 0.8;
+    transition: all 10ms ease-in-out;
+}
+    
+button {
+    background: rgba(203, 174, 128, 0.85);
+    border-radius: 2px;
+    color: black;
+    border:none;
+    position: static;
+    width: 28px;
+    height: 28px;
+}
+    
+button img {
+    width: 15px;
+    height: 15px;
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
+}
+    
+.container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 230px 73px 215px 200px;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    height: 100%;
+    margin: 0;
+}
+
+.city-name { 
+    grid-area: 2 / 1 / 3 / 2;
+    font-size: 36px;
+    font-weight: normal;
+}
+
+.display { 
+    grid-area: 1 / 2 / 5 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@font-face {
+    font-family: Brewski;
+    src: url(../assets/BrewskiTextured.woff2);
+}
 
 html {
     background:
@@ -7,17 +86,10 @@ html {
     margin: 0;
     overflow: hidden;
     height: 100%;
-   }
-
-@font-face {
-    font-family: Brewski;
-    src: url(../assets/BrewskiTextured.woff2);
-    font-display: swap;
-  }
+    }
 
 h1 {
     font-family: Brewski;
-    font-style: normal;
     font-weight: normal;
     font-size: 86px;
     line-height: 100%;
@@ -28,138 +100,23 @@ h1 {
     padding-left: 94px;
 }
 
-* {
-    font-family: Brewski;
-    color: rgba(203, 174, 128, 0.85);
-}
-#input,input:focus, textarea:focus,select, select:focus{
-    outline: none;
-    border:none;
-}
-
-
-.container {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 230px 73px 215px 200px;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    height: 100%;
-    margin: 0;
-  }
-
-
-  
-.title { 
-    grid-area: 1/ 1 / 2 / 3;
- }
-  
-.input-container { 
-    grid-area: 3 / 1 / 4 / 2;
-    display:flex;
-    flex-direction: row;
-    padding-left: 94px;
-    padding-top: 30px; }
-
-
-  
-.city-name { 
-    grid-area: 2 / 1 / 3 / 2;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: normal;
- }
-  
-.refresh { 
-    grid-area: 4 / 1 / 5 / 2; }
-  
-.display { 
-    grid-area: 2 / 2 / 5 / 3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
- }
-
-p {
-    padding-left: 94px;
-    padding-bottom: 30px;
-}
-
-.temp {
-    background: rgba(0, 0, 0, 0.4);
-    border: 2px solid rgba(203, 174, 128, 0.27);
-    box-sizing: border-box;
-
-    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.51);
-    border-radius: 4px;
-    position: static;
-    width: 237px;
-    height: 153px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
 h2 {
     font-size: 100px;
     text-align: center;
     font-weight: 200;
 }
 
-.up-down {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    padding-right: 12px;
-    padding-left: 8px;
+#input,input:focus, textarea:focus,select, select:focus{
+    outline: none;
     border:none;
-    gap: 4px;
-
-}
-.sky {
-    background: rgba(0, 0, 0, 0.4);
-border: 2px solid rgba(203, 174, 128, 0.27);
-box-sizing: border-box;
-
-box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.51);
-border-radius: 4px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px 29px;
-
-position: static;
-width: 136.6px;
-height: 153px;
-left: 251px;
-top: 0px;
-margin: 0px 14px;
-font-size: 36px;
 }
 
-#skyState {
-    font-size: 56px;
-}
-#skies {
-    background: rgba(203, 174, 128, 0.85);
-border-radius: 2px;
-display: flex;
-flex-direction: row;
-justify-content: center;
-
-position: static;
-width: 100px;
-height: 35px;
-left: 29px;
-top: 87px;
-color: rgba(0, 0, 0, 0.7);
-font-family: Brewski;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 16px;
+.input-container { 
+    grid-area: 3 / 1 / 4 / 2;
+    display:flex;
+    flex-direction: row;
+    padding-left: 94px;
+    padding-top: 30px; 
 }
 
 #input {
@@ -171,107 +128,126 @@ line-height: 16px;
     line-height: 16px;
     color: rgba(0, 0, 0, 0.7);
     padding-top: 2px;
-
-
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .input-city {
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px 18px;
-
-position: static;
-width: 219px;
-height: 153px;
-left: 401.6px;
-top: 0px;
-
-background: rgba(0, 0, 0, 0.4);
-border: 2px solid rgba(203, 174, 128, 0.27);
-box-sizing: border-box;
-
-box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.51);
-border-radius: 4px;
-
-flex: none;
-order: 2;
-flex-grow: 0;
-margin: 0px 14px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 18px;
+    border-radius: 4px;
+    width: 219px;
+    height: 153px;
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid rgba(203, 174, 128, 0.27);
+    box-sizing: border-box;
+    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.51);
 }
- label {
+
+label {
     font-size: 36px;
- }
+}
 
- .label-sky {
+.label-sky {
      padding-bottom: 14px;
- }
-#button-refresh {
-    display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 21px 29px;
-position: absolute;
-width: 362px;
-height: 67px;
-left: 94px;
-top: 583px;
-background: rgba(203, 174, 128, 0.27);
-border: 2px solid rgba(255, 255, 255, 0.4);
-box-sizing: border-box;
-border-radius: 4px;
-font-size: 24px;
-line-height: 80%;
-transform: none;
-color: rgba(203, 174, 128, 0.85);
-box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.2);
-transition: all 200ms ease-in-out;
-}
-#button-refresh:hover {
-    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.4);
-    transition: all 200ms ease-in-out;
-}
-#button-refresh:active {
-    box-shadow: 0px 5px 10px 0px rgba(52, 33, 16, 0.4);
-    opacity: 0.8;
-    transition: all 10ms ease-in-out;
 }
 
-button {
+#landscape {
+    font-size: 56px;
+    text-align: center;
+    margin: 0;
+}
+option {
+    text-align: center;
+}
+
+p {
+    padding-left: 94px;
+    padding-bottom: 30px;
+}
+
+.refresh { 
+    grid-area: 4 / 1 / 5 / 2;
+    display: flex; 
+    justify-content: center;
+    padding-top: 55px;
+    padding-left: 105px;
+}
+
+.sky {
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid rgba(203, 174, 128, 0.27);
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.51);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 136.6px;
+    height: 153px;
+    margin: 0px 14px; 
+    font-size: 36px;
+}
+
+#skyState {
+    font-size: 56px;
+    text-align: left;
+}
+
+#skies {
     background: rgba(203, 174, 128, 0.85);
     border-radius: 2px;
-    color: black;
-    border:none;
-    position: static;
-    width: 28px;
-    height: 28px;
+    width: 100px;
+    height: 35px;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 18px;
+    line-height: 16px;
 }
-
-button img {
-    width: 15px;
-    height: 15px;
-    display: flex;
-    justify-content: center;
-    vertical-align: middle;
-}
-
-/* .show-image {
-    display: block;
-} */
 
 #sky-sunny,
 #sky-cloudy,
 #sky-snowy,
 #sky-rainy {
     display: none;
-    width: 100px;
-    height: 100px;
+    width: 484px;
+    height: 253px;
+}
+
+.sky-picture {
+    display: flex;
+    justify-content: center;
+    height: 253px;
+    width: 500px;
+    padding-top: 150px;
+    padding-right: 125px;
+}
+
+.title { 
+    grid-area: 1/ 1 / 2 / 2;
+ }
+  
+.temp {
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid rgba(203, 174, 128, 0.27);
+    box-sizing: border-box;
+    box-shadow: 0px 34px 20px -12px rgba(52, 33, 16, 0.51);
+    border-radius: 4px;
+    width: 237px;
+    height: 153px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.up-down {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-right: 12px;
+    padding-left: 8px;
+    border:none;
+    gap: 4px;
 }
