--- a/styles/vibe2.css
+++ b/styles/vibe2.css
@@ -1,9 +1,9 @@
 
 body{
-    background: linear-gradient(310deg, rgb(115, 252, 236) 0%, rgb(139, 102, 241) 100%);
+    background:#CEB0B2;
     
 }
 
 h1 {
-    font-family: 'Gwendolyn', cursive;
+    font-family: 'Cormorant Garamond', serif;
 }
