--- a/styles/vibe1.css
+++ b/styles/vibe1.css
@@ -1,14 +1,15 @@
 
 body{
-    background: linear-gradient(159deg, rgb(252, 115, 156) 0%, rgb(139, 102, 241) 100%);
-    
+    background: radial-gradient(50% 123.47% at 50% 50%, #00FF94 0%, #FF00C7 100%), linear-gradient(121.28deg, #213100 0%, #FF0000 100%), linear-gradient(360deg, #0029FF 0%, #8FFF00 100%), linear-gradient(114.9deg, #00C6A2 0%, #6A45A8 100%), radial-gradient(100% 148.07% at 0% 0%, #FFFFFF 0%, #1DCD00 100%);
+    background-blend-mode: screen, color-dodge, overlay, difference, normal;
 }
 
 h1 {
     background-color: antiquewhite;
     text-shadow: 5px 5px 10px rgba(229, 16, 245, 0.4);
     color: #e510f5;
-    font-family: 'Fuzzy Bubbles', cursive;
+    font-family: 'Londrina Shadow', cursive;
+    letter-spacing: 0.2rem;
 }
 
 
