--- a/styles/index.css
+++ b/styles/index.css
@@ -121,13 +121,12 @@ h2 {
 .temp-selector{
     height:120px;
     width:80px;
-    background-color: black;
     position:relative;
 }
 button {
     width:100%;
     height:30px;
-    background-color:black;
+    background-color:transparent;
     border:none;
     color:#fff;
     font-size:20px;
@@ -137,10 +136,9 @@ button {
 #TempBox, input{
     width:100%;
     height:60px;
-    background-color:black;
     border:none;
     font-size:44px;
-    margin-left: .1rem;
+    margin-left: .3rem;
     padding-left: .5rem;
     }
 
@@ -171,7 +169,7 @@ input {
     color:#fff;
     position:absolute;
     top:30px;
-    right:10px;
+    right:7px;
     font-size:24px;
     }
 
