--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@ body {
     height: 100%;
     max-width: 100%;
     min-width: 568px;
+    margin-bottom: 0px;
     background-image: linear-gradient(180deg, #093824, #251F47);
 
 }
@@ -18,10 +19,13 @@ h1 {
     color: white;
     text-align: right;
     line-height: 0.3em;
-    
+    margin-right: 40px;
 }
 h2{
     color: white;
+    margin-top: 3px;
+    margin-bottom: 1px;
+    font-size: 22px;
 }
 h3{
     color: #EDFFAB;
@@ -49,7 +53,7 @@ h4{
     background-color: turquoise;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
-    background-image: linear-gradient(180deg, turquoise, aliceblue);
+    background-image: linear-gradient(180deg, LightSeaGreen, DodgerBlue);
 }
 #earth-landscape{
     min-height: 50px;
@@ -62,7 +66,12 @@ h4{
 
 #sky-temperature-container{
     display: flex;
-    margin-top: 30px;
+    margin-top: 20px;
+    height: 122px;
+}
+
+.weather-garden-container{
+    display: flex;
 }
 .sky-selection-section{
     background-color: #64B6AC;
@@ -71,19 +80,21 @@ h4{
     border-radius: 25px;
     border-style:solid;
     border-color: white;
+    height: 100px;
 }
 .remote-control-box{
     display: flex;
     overflow: hidden;
     align-items: center;
     height: 50px;
-
 }
+
 .temperature-control-section{
     overflow: hidden;
     background-color: #64B6AC;
     min-width: 185px;
-    height: 130px;
+    height: 100px;
+
     padding: 10px;
     margin-right: 40px;
     border-radius: 25px;
@@ -123,10 +134,47 @@ h4{
 .temperature-digit{
     outline: none;
     background-color: transparent;
-    float: right;
     width: 80px;
     border: hidden;
     font-size: 40px;
     color:teal;
 }
 
+#conversor-reset-container{
+    display: flex;
+    margin-top: 20px;
+    height: 100px;
+}
+
+.celsius-convertor-section{
+    background-color: #64B6AC;
+    margin-right: 40px;
+    min-width: 185px;
+    padding: 10px;
+    border-radius: 25px;
+    border-style:solid;
+    border-color: white;
+}
+.reset-section{
+    background-color: #64B6AC;
+    min-width: 120px;
+    padding: 10px;
+    border-radius: 25px;
+    border-style:solid;
+    border-color: white;
+}
+
+#squirrel-img{
+    float:right;
+    width: 316px;
+    height: 350px;
+
+}
+
+.temperature-flex-box{
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    height: 50px;;
+    margin: 2px;
+}
