--- a/styles/index.css
+++ b/styles/index.css
@@ -1,57 +1,69 @@
 /* https://www.csscolorpalettes.com/palettes/898 - main color palette */
 
-body.grid-1 {
+body#page {
     background: #8ca3e6;
+    color: #2cb978;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-areas: 
+        "header header header header"
+        "inputs cityScape cityScape cityScape"
+        "inputs cityScape cityScape cityScape"
+        "inputs cityScape cityScape cityScape"
+        "inputs cityScape cityScape cityScape";
     grid-gap: 20px;
 }
 
-header {
+#page > header {
+    display: grid;
+    justify-items: center;
+    grid-area: header;
     background: #c8efed;
     border: 4px solid #ffffc2;
-    color: #ffffc2;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
 }
 
-section#landscape {
+#page > .cityScape {
+    grid-area: cityScape;
+    background: #c8e7ed;
     border: 4px solid #ffffc2;
-    color: #ffffc2;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
+    display: grid;
+    grid-template-columns: 2fr;
+    grid-template-rows: 1fr 1fr;
 }
 
-section.inputBlock {
+#page > #inputs {
+    grid-area: inputs;
+}
+
+.inputTitle {
+    display: grid;
+    justify-items: center;
     background: #c8efed;
     border: 4px solid #ffffc2;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
 }
-/* 
-section.skyBlock {
+
+.inputCityBlock{
+    display: grid;
+    justify-items: center;
+    grid-area: inputCityBlock;
     background: #c8efed;
     border: 4px solid #ffffc2;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-} */
-
-select.skyDropMenu {
-    color: #2cb978
 }
 
-section.tempBlock {
+.skyBlock{
+    display: grid;
+    justify-items: center;
+    grid-area: skyBlock;
     background: #c8efed;
     border: 4px solid #ffffc2;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
 }
 
-section.tempDisplays {
-    background: #ffffc2;
-    border: 4px solid #8ca3e6;
+.tempBlock {
+    display: grid;
+    justify-items: center;
+    background: #c8efed;
+    border: 4px solid #ffffc2;
 }
