--- a/styles/index.css
+++ b/styles/index.css
@@ -72,6 +72,7 @@ body {
     background-color: #A6ACCD;
     color: #292D3E;
     font-size: 14pt;
+    border: 0;
 }
 
 /* #reset-button {
@@ -83,8 +84,17 @@ body {
     border-radius: 10px;
     margin-top: 20px;
     font-size: 12pt;
-    color: #292D3E;
+    color: #202331;
     background-color: #676E95;
+    border: 0;
+}
+
+#city-reset:hover {
+    background-color: #82aaff;
+}
+
+#city-reset:active {
+    transform: translateY(2px);
 }
 
 #temperature-block {
