--- a/styles/index.css
+++ b/styles/index.css
@@ -153,3 +153,14 @@ h1 {
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: rgb(184, 49, 94)}
+
+  #weather-garden-display {
+      align-content: center;
+      list-style: none;
+      padding:0;
+  }
+
+  /* select {
+    font-size: .9rem;
+    padding: 2px 5px;
+} */
