--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
     margin: auto;
     height: 80vh;
     display: grid;
-    grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
+    grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
 }
 
 header {
@@ -14,32 +14,40 @@ header {
 }
 
 #instructions {
-    grid-column: span 4;
+    grid-column: span 3;
     grid-row: 2;
     font-size: small;
     text-align: center;
+    display: grid;
+    grid-template: 30px 70px 180px / 1fr;
+    margin-bottom: 15px;
 }
 
 #skySelect {
-    grid-column: 4;
-    grid-row: 3;
-    background-color: pink;
+    grid-column: 1;
+    grid-row: 1;
 }
 
-#inputForm {
-    grid-column: 1 / span 2;
+#inputFormBox {
+    background-color: whitesmoke;
+    width: 300px;
     grid-row: 3;
+    padding: 1%;
+    margin-inline: auto;
 }
 
 #temp-section {
-    grid-column: 3;
+    grid-column: 2;
     grid-row: 3;
-    background-color: yellow;
+    padding: 10%;
+    background-color: whitesmoke;
+    text-align: center;
+    width: auto;
 }
 
 #landscapeContainer {
     background-color: wheat;
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
     grid-row: 4;
 }
 
@@ -51,7 +59,10 @@ footer {
 }
 
 #temperature {  
-    background-color: whitesmoke;
+    font-family: 'Londrina Shadow', cursive;
+    color: #FEC106;
+    background-color: inherit;
+    font-size: xx-large;
 }
 
 
