--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,55 @@
 body {
-    background: white;
+    display: grid;
+    grid-template: 1fr 1fr 1fr 1fr / 3fr .25fr 3fr;
+    background: rgb(204, 204, 204);
+    margin: 25px 25px 25px 25px;
+}
+
+header {
+    grid-row: 1 / span 1;
+    grid-column: 1/ span end; 
+    text-align: center;
 }
 
 .temperature {
-    background: white;
-    
+    background: rgb(255, 255, 255, 70%);
+    grid-row: 3/ span 1; 
+    grid-column: 1/ span 1;
+    padding-left: 15px;
+}
+
+.sky {
+    background: rgb(255, 255, 255, 70%);
+    grid-row: 4/ span 1; 
+    grid-column: 1/ span 1;
+    padding-left: 15px;
+}
+
+.city-name {
+    background: rgb(255, 255, 255, 70%);
+    grid-row: 2/ span 1; 
+    grid-column: 1/ span 1;
+    padding-left: 15px;
+}
+
+.weather-display {
+    background: rgb(255, 255, 255, 70%);
+    grid-column: 3/ span 1; 
+    text-align: center;
+}
+
+#weather-garden {
+    background: rgb(69, 69, 255, 40%);
+    margin: 10px 25px 10px 25px;
+    font-size: 4vh;
+}
+
+#sky-garden {
+    grid-area: 3/ 3/ span 1/ span 1;
+}
+
+#landscape-garden {
+    grid-area: 4/ 3/ span 1/ span 1;
 }
 
 .red {
